log
Wed 10 May 2023 12:01:14 AM UTC: 
 sudoku.c | 70 +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++-
 1 file changed, 69 insertions(+), 1 deletion(-)
 tests:  3|4
total_score: 20/70
818242d
Wed 10 May 2023 12:04:21 AM UTC: 
 sudoku.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘is_final’:
sudoku.c:128:3: error: this ‘for’ clause does not guard... [-Werror=misleading-indentation]
  128 |   for (int i = 0; i < 9; i++)
      |   ^~~
sudoku.c:134:5: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘for’
  134 |     return 1;
      |     ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
9225805
